--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>React Transform Boilerplate</title>
+      <title>React d3 gallery</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   </head>
   <body>
-    <div id="root"></div>
+      <div class="container">
+          <div id="root"></div>
+      </div>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
